add categories route, test and edit product route to use filters
