# lib/database/models/category.js
@@ -17,6 +17,22 @@ class Category extends Model {
       }
     }
   }
+
+  static get relationMappings() {
+
+    const Product = require('./product');
+
+    return {
+      product: {
+        relation: Model.BelongsToOneRelation,
+        modelClass: Product,
+        join: {
+          from: `${Category.tableName}.id`,
+          to: `${Product.tableName}.category_id`
+        }
+      }
+    }
+  }
 }
 
 module.exports = Category
