# lib/routes/products/list.js
@@ -10,7 +10,10 @@ module.exports = {
     tags: ['products'],
     querystring: {
       page: { type: 'number', 'minimum': 0 },
-      size: { type: 'number', 'minimum': 1 }
+      size: { type: 'number', 'minimum': 1 },
+      category: { type: 'number' },
+      search: { type: 'string' },
+      availability: { type: 'boolean' }
     },
     response: {
       200: {
@@ -42,9 +45,9 @@ module.exports = {
 
     const { productService } = request.fastify;
 
-    const { page, size } = request.query
+    const { page, size, category_id, search, availability } = request.query
 
-    const products = await productService.listAllProducts({ page, size });
+    const products = await productService.listAllProducts({ page, size, category_id, search, availability });
 
     return reply.code(200).send(products);
   }
